Get impact history from session error resolved
