# code/backend/src/db/session.schema.ts
@@ -8,7 +8,6 @@ interface SessionDocument extends Document {
   createdAt: number;
   updatedAt: number;
   impactHistory: ImpactPlayer[];
-  active: boolean;
 }
 
 const sessionSchema = new Schema({
@@ -19,7 +18,7 @@ const sessionSchema = new Schema({
   updatedAt: Number,
   impactHistory: [
     {
-      playerId: Number,
+      jerseyId: Number,
       impact: [
         {
           magnitude: Number,
@@ -30,7 +29,6 @@ const sessionSchema = new Schema({
       ],
     },
   ],
-  active: Boolean,
 });
 
 const SessionModel = mongoose.model<SessionDocument>("Session", sessionSchema);
