# code/backend/swagger.json
@@ -897,73 +897,33 @@
             "type": "integer"
           },
           "impactHistory": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "jerseyId": {
-                  "type": "integer"
-                },
-                "impacts": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "magnitude": {
-                        "type": "integer"
-                      },
-                      "direction": {
-                        "type": "string"
-                      },
-                      "timestamp": {
-                        "type": "integer"
-                      },
-                      "isConcussion": {
-                        "type": "boolean"
-                      }
-                    }
-                  }
-                }
-              }
-            }
+            "type": "string"
           }
         },
         "example": {
           "sessionId": "sessionId",
-          "teamId": "exampleTeamId",
           "sessionName": "sessionName",
           "createdAt": 486486,
           "updatedAt": 486486,
-          "impactHistory": [
-            {
-              "jerseyId": 12,
-              "impacts": [
-                {
-                  "magnitude": 10,
-                  "direction": "left",
-                  "timestamp": 123456789,
-                  "isConcussion": true
-                },
-                {
-                  "magnitude": 10,
-                  "direction": "left",
-                  "timestamp": 123456789,
-                  "isConcussion": true
-                }
-              ]
-            },
-            {
-              "jerseyId": 13,
-              "impacts": [
-                {
-                  "magnitude": 40,
-                  "direction": "left",
-                  "timestamp": 123456789,
-                  "isConcussion": true
-                }
-              ]
-            }
-          ]
+          "teamId": "exampleTeamId",
+          "impactHistory": {
+            "12": [
+              {
+                "magnitude": 10,
+                "direction": "left",
+                "timestamp": 123456789,
+                "isConcussion": true
+              }
+            ],
+            "13": [
+              {
+                "magnitude": 10,
+                "direction": "left",
+                "timestamp": 123456789,
+                "isConcussion": false
+              }
+            ]
+          }
         }
       },
       
